--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.31.10",
     "html-loader": "^4.2.0",
-    "nodemon": "^2.0.19",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "postcss-preset-env": "^7.8.2",
